@@ -2,6 +2,8 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2018, PHP 7.1.23
 
+- POSIX:
+  Fixed bug #75696 (posix_getgrnam fails to print details of group). (cmb)
 
 13 Sep 2018, PHP 7.1.22
 
